Migrate to libs version of PemUtils